# pf-core

./: .env.example  .gitignore  .pf-guards.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  docs  llms.txt  pyproject.toml
.ai/guards/: file_size_baseline.json
.ai/rules/: anti-patterns.md  anti-patterns.mdc  code-style.md  code-style.mdc  config-driven.md  config-driven.mdc  docs-sync.md  docs-sync.mdc  error-handling.md  error-handling.mdc  layering.md  layering.mdc  logging.md  plans.md  project-structure.md  project-structure.mdc  scope.md
.claude/: plans
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: guards.yml  publish.yml  test.yml
src/pf_core/: __init__.py  _extras.py  alembic.py  config.py  doctor.py  exceptions.py  log.py  output.py  parallel.py  wiring.py
src/pf_core/budget/: __init__.py  _schema.py  audit.py  check.py  config.py  repo.py  scheduler.py  snapshot_job.py
src/pf_core/cache/: redis.py
src/pf_core/cli/: __init__.py  jobs.py
src/pf_core/cli/subcommands/: __init__.py  _render.py  baseline.py  invalidate.py
src/pf_core/clients/: __init__.py  anthropic.py  brave.py  claude_code.py  openrouter.py  routing.py
src/pf_core/db/: __init__.py  connection.py  helpers.py  json_compat.py  models.py  repository.py  soft_delete.py  types.py  upsert.py  versioned_config.py
src/pf_core/docs/: INSTALLATION.md  alembic.md  anthropic.md  anti-hallucination.md  article-fetch.md  brave.md  cache.md  claude-code.md  cli-subcommands.md  cli.md  config-path.md  config.md  cost-budget.md  database.md  dates.md  db-upsert.md  doctor.md  env.md  eval-harness.md  exceptions.md  export.md  guards.md  hashing.md  ids.md  io.md  jobs-admin.md  jobs-runtime.md  jobs.md  json-recovery.md  json-utils.md  linting.md  llm-admin.md  llm-cache.md  llm-parse.md  llm-recording.md  llm-safe-apply.md  llm-schema-validation.md  llm-step.md  llm-tracked.md  llm-tracking.md  (+30 more)
src/pf_core/docs/recipes/: batch-llm-service.md  critic.md  job-refs-bridge.md  self-consistency.md
src/pf_core/eval/: __init__.py  _compare.py  _config.py  _golden.py  _judge.py  _report.py  _runner.py
src/pf_core/export/: __init__.py  markdown.py
src/pf_core/guards/: __init__.py  __main__.py  config.py  layering.py  structure.py
src/pf_core/jobs/: __init__.py  _repo_steps.py  _repo_util.py  _repo_worker.py  _schema.py  registry.py  repo.py  runtime.py  submit.py  workers.py
src/pf_core/llm/: __init__.py  _router_config.py  _router_loader.py  _router_schema.py  parse.py  prompts.py  recording.py  router.py  safe_apply.py  step.py  tracked.py  url_check.py
src/pf_core/llm/cache/: __init__.py  _recorder.py  _schema.py  config.py  exact.py  invalidate.py
src/pf_core/llm/tracking/: __init__.py  _metadata.py  _resolvers.py  decorator.py  purge.py  repo.py  schema.py  stats.py  subrepos.py
src/pf_core/llm/validate/: __init__.py  _cross_field.py  _jsonschema.py  _pipeline.py  _pydantic.py  _registry.py  _semantic.py
src/pf_core/orchestrators/: __init__.py  base.py
src/pf_core/parsers/: __init__.py  exceptions.py  html.py  types.py
src/pf_core/pipeline/: __init__.py  baseline.py  baseline_diff.py  cache.py  resume.py  run_record.py  sequencer.py
src/pf_core/pricing/: __init__.py  _data.py  _resolver.py  _types.py
src/pf_core/services/: __init__.py  base.py
src/pf_core/testing/: __init__.py  db_fixtures.py  env.py  fixtures.py
src/pf_core/utils/: __init__.py  _article_extract.py  article_fetch.py  config_path.py  dates.py  env.py  hashing.py  http_tls.py  ids.py  io.py  json.py  json_recovery.py  periods.py  phash.py  relative_dates.py  similarity.py  slugify.py  throttle.py  url_html.py  url_liveness.py  url_parse.py  url_safety.py  urls.py  vocab.py
src/pf_core/web/: __init__.py  app_factory.py  health.py  helpers.py  json.py  markdown.py  pagination.py  rate_limit.py  templates.py
src/pf_core/web/jobs_admin/: __init__.py
src/pf_core/web/jobs_admin/templates/: job_detail.html  jobs_list.html
src/pf_core/web/llm_admin/: __init__.py  _queries_jobs.py  _queries_runs.py  _queries_spend.py  _queries_util.py  api.py  pages.py  queries.py
src/pf_core/web/llm_admin/templates/: base.html  budgets.html  cache.html  (+8 more)
templates/consumer-app/: .env.example  .gitignore  .pf-guards.toml  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
templates/consumer-app/.github/workflows/: guards.yml
templates/consumer-app/app/: __init__.py  __main__.py  config.py
templates/consumer-app/app/api/: __init__.py  pages.py
templates/consumer-app/tests/: test_smoke.py
templates/consumer-lib/: .env.example  .gitignore  .pf-guards.toml  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
templates/consumer-lib/.github/workflows/: guards.yml
templates/consumer-lib/src/__PKG__/: __init__.py  cli.py  config.py
templates/consumer-lib/tests/: test_smoke.py
tests/: conftest.py  test_alembic.py  test_app_factory.py  test_article_fetch.py  test_budget.py  test_budget_scheduler.py  test_cache.py  test_cli.py  test_cli_jobs.py  test_cli_subcommands.py  test_clients_anthropic.py  test_clients_anthropic_parity.py  test_clients_brave.py  test_clients_claude_code.py  test_clients_registry.py  test_clients_routing.py  test_config.py  test_dates.py  test_db_connection.py  test_db_helpers.py  test_db_json_compat.py  test_db_models.py  test_db_types.py  test_db_upsert.py  test_db_versioned_config.py  test_docs_pins.py  test_doctor.py  test_eval_compare.py  test_eval_config.py  test_eval_golden.py  test_eval_judge.py  test_eval_runner.py  test_exceptions.py  test_export.py  test_extras_guard.py  test_guards_cli.py  test_guards_config.py  test_guards_layering.py  test_guards_structure.py  test_health.py  (+70 more)
tests/test_jobs/: conftest.py  test_registry.py  test_repo.py  test_runtime.py
tests/test_llm_validate/: conftest.py  test_adapters.py  test_cross_field.py  test_db_write.py  test_pipeline.py  test_registry.py  test_semantic.py
