[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "__NAME__"
version = "0.1.0"
description = "A pf-core full-stack app (FastAPI + SQLAlchemy)."
requires-python = ">=3.11"
dependencies = [
    # pf-core with the whole framework surface. Add a DB driver extra
    # ([postgres] or [mysql]) for non-SQLite backends. Pinned to a compatible
    # PyPI release (picks up patch/minor within the line). 0.4+ carries the
    # config-driven structural gate ([tool.pf_guards] below).
    "pf-core[__EXTRAS__]~=0.4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "pre-commit>=3.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# Structural gate (bin/lint, pre-commit, CI all run `python -m pf_core.guards`).
# Per-layer limits + layering apply to the app/ tree; see pf-core docs/guards.md.
[tool.pf_guards]
root = "app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

# Ruff config mirrors pf-core's conservative set (see .ai/rules/code-style.md).
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "B"]
ignore = ["E501", "B008", "B904"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]
