[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "__NAME__"
version = "0.1.0"
description = "A pf-core library / tool."
requires-python = ">=3.11"
dependencies = [
    # pf-core foundation + the extras this project uses, pinned to a compatible
    # PyPI release (picks up patch/minor within the line). 0.4+ carries the
    # config-driven structural gate ([tool.pf_guards] below).
    "pf-core[__EXTRAS__]~=0.4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "pre-commit>=3.0"]

[project.scripts]
__NAME__ = "__PKG__.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

# Structural gate (bin/lint runs `python -m pf_core.guards`); flat library
# limits for a src layout. See pf-core docs/guards.md.
[tool.pf_guards]
root = "src/__PKG__"

[tool.pytest.ini_options]
testpaths = ["tests"]

# Ruff config mirrors pf-core's conservative set (see .ai/rules/code-style.md).
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "B"]
ignore = ["E501", "B008", "B904"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]
